Update input fields and styles for better usability

--- a/src/templates/_properties-input.twig
+++ b/src/templates/_properties-input.twig
@@ -128,7 +128,8 @@
 {# TODO: Namespace classes #}
 {% css %}
 .text-border {
-    border: 1px solid gray !important;
+    border: 1px solid rgb(229, 231, 235) !important;
+    border-radius: 4px !important;
 }
 
 .text-margin {
