--- a/src/templates/_inputs/dimension.twig
+++ b/src/templates/_inputs/dimension.twig
@@ -1,10 +1,10 @@
 {% import '_includes/forms.twig' as forms %}
 
-<div style="padding: 16px 8px 8px 8px; display: flex; align-items: center">
+<div style="padding: 4px 0; display: flex; align-items: center">
     <div>
         {{ forms.textField({
             name: "#{propertyConfig.handle}[quantity]",
-            label: 'Quantity',
+            placeholder: 'Quantity',
             type: 'number',
             class: 'text-border',
             value: value['quantity'] ?? ''
@@ -14,7 +14,7 @@
     <div>
         {{ forms.textField({
             name: "#{propertyConfig.handle}[unit]",
-            label: 'Unit',
+            placeholder: 'Unit',
             class: 'text-border text-margin',
             value: value['unit'] ?? '',
             first: true
